--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="message__body">
                 <p>
-                    <a href="{{url}}" target="_blank">Ny current location</a>
+                    <a href="{{url}}" target="_blank">My current location</a>
                 </p>
             </div>
         </li>
