--- a/public/chat.html
+++ b/public/chat.html
@@ -50,10 +50,19 @@
         </li>
     </script>
 
+    <script id="user-list-template" type="text/template">
+        <ol>
+            {{#users}}
+                <li>{{.}}</li>
+            {{/users}}
+        </ol>
+    </script>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/lib/jquery-3.5.1.min.js"></script>
     <script src="js/lib/moment.js"></script>
     <script src="js/lib/mustache.js"></script>
+    <script src="js/lib/deparam.js"></script>
     <script src="js/chat.js"></script>
 </body>
 
