--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,26 @@
                 </div>
                 <div class="form-field">
                     <label>Room name</label>
-                    <input type="text" name="room"/>
+                    <input id="room_name" type="text" name="room"/>
+                </div>
+                <div class="form-field">
+                    <div id="room-list"></div>
                 </div>
                 <div class="form-field">
                     <button>Join</button>
                 </div>
             </form>
         </div>
+        <script id="room-list-template" type="text/template">
+            <select id="chat__available__rooms" onchange="_selectRoom();">
+                <option value="" selected disabled hidden>Available Room</option>
+                {{#data}}
+                <option value="{{roomValue}}">{{displayText}}</option>
+                {{/data}}
+            </select>
+        </script>
+        <script src="js/lib/jquery-3.5.1.min.js"></script>
+        <script src="js/lib/mustache.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
