--- a/public/chat.html
+++ b/public/chat.html
@@ -15,8 +15,9 @@
     </div>
     <div class="chat__main">
         <ol id="messages" class="chat__messages"></ol>
+        <div id="typing" class="chat__user_typing"></div>
         <div class="chat__footer">
-            <form id="message-form">
+             <form id="message-form">
                 <input name="message" type="text" placeholder="Message" autofocus autocomplete="off"/>
                 <button>Send</button>
             </form>
